--- a/arch/arm64/boot/dts/qcom/rosy/rosy-general.dtsi
+++ b/arch/arm64/boot/dts/qcom/rosy/rosy-general.dtsi
@@ -45,6 +45,16 @@
 		spi6 = &spi_6;
 		i2c8 = &i2c_8;
 	};
+
+	reserved-memory {
+		ramoops_mem: ramoops@91400000 {
+			compatible = "ramoops";
+			reg = <0x0 0x91400000 0x0 0x00400000>;
+			record-size = <0x80000>;
+			pmsg-size = <0x200000>;
+			console-size = <0x100000>;
+		};
+	};
 };
 
 &soc {
