--- a/arch/arm64/boot/dts/qcom/rosy/rosy-pm.dtsi
+++ b/arch/arm64/boot/dts/qcom/rosy/rosy-pm.dtsi
@@ -150,7 +150,7 @@
 				qcom,support-reset = <1>;
 				qcom,s1-timer = <4480>;
 				qcom,s2-timer = <2000>;
-				qcom,s2-type = <7>;
+				qcom,s2-type = <PON_POWER_OFF_WARM_RESET>;
 			};
 
 			qcom,pon_3 {
