ARM64: dts: rosy: Update qpnp-haptic configurations
Signed-off-by: Lawliet L <zexceed12300@gmail.com>

--- a/arch/arm64/boot/dts/qcom/rosy/rosy-pm.dtsi
+++ b/arch/arm64/boot/dts/qcom/rosy/rosy-pm.dtsi
@@ -216,9 +216,10 @@
 		};
 
 		pmi_haptic: qcom,haptics@c000 {
-			qcom,actuator-type = <erm>;
-			qcom,vmax-mv = <2900>;
 			/delete-property/ qcom,en-brake;
+
+			qcom,actuator-type = <1>;
+			qcom,vmax-mv = <2900>;
 		};    
 	};
 };
