--- a/arch/arm64/boot/dts/qcom/rosy/rosy-camera.dtsi
+++ b/arch/arm64/boot/dts/qcom/rosy/rosy-camera.dtsi
@@ -13,21 +13,21 @@
  */
 
 &soc {
-	led_flash1: qcom,cam-frontflash {
-		cell-index = <2>;
-		compatible = "qcom,cam-frontflash";
-		qcom,flash-type = <1>;
-		qcom,flash-source = <&pmi8940_flash1>;
-		qcom,torch-source = <&pmi8940_torch1>;
-		qcom,switch-source = <&pmi8940_switch>;
-	};
-
 	led_flash0: qcom,camera-flash {
 		cell-index = <0>;
 		compatible = "qcom,camera-flash";
 		qcom,flash-type = <1>;
 		qcom,flash-source = <&pmi8940_flash0>;
 		qcom,torch-source = <&pmi8940_torch0>;
+		qcom,switch-source = <&pmi8940_switch>;
+	};
+
+	led_flash1: qcom,camera-frontflash {
+		cell-index = <1>;
+		compatible = "qcom,camera-frontflash";
+		qcom,flash-type = <1>;
+		qcom,flash-source = <&pmi8940_flash1>;
+		qcom,torch-source = <&pmi8940_torch1>;
 		qcom,switch-source = <&pmi8940_switch>;
 	};
 };
