--- a/arch/arm64/configs/EternalX_defconfig
+++ b/arch/arm64/configs/EternalX_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.227 Kernel Configuration
+# Linux/arm64 4.9.263 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -132,22 +132,22 @@ CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
-# CONFIG_CGROUP_DEBUG is not set
-CONFIG_CGROUP_FREEZER=y
-# CONFIG_CGROUP_PIDS is not set
-# CONFIG_CGROUP_DEVICE is not set
-CONFIG_CPUSETS=y
-CONFIG_PROC_PID_CPUSET=y
-CONFIG_CGROUP_CPUACCT=y
-CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 # CONFIG_BLK_CGROUP is not set
 CONFIG_CGROUP_SCHED=y
+CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
+# CONFIG_CGROUP_PIDS is not set
+CONFIG_CGROUP_FREEZER=y
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
+# CONFIG_CGROUP_DEVICE is not set
+CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_SCHED_CORE_CTL=y
 # CONFIG_SCHED_CORE_ROTATE is not set
@@ -566,7 +566,10 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KUSER_HELPERS=y
 CONFIG_KEYS_COMPAT=y
+# CONFIG_COMPAT_VDSO is not set
+CONFIG_CROSS_COMPILE_ARM32=""
 
 #
 # Power management options
@@ -600,7 +603,7 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
-# CONFIG_CPU_IDLE_GOV_MENU is not set
+CONFIG_CPU_IDLE_GOV_MENU=y
 
 #
 # ARM CPU Idle Drivers
@@ -1265,6 +1268,7 @@ CONFIG_BLK_DEV=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_WRITEBACK is not set
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
@@ -2055,6 +2059,7 @@ CONFIG_SPI_QUP=y
 CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
+# CONFIG_SPI_DYNAMIC is not set
 CONFIG_SLIMBUS=y
 # CONFIG_SLIMBUS_MSM_CTRL is not set
 CONFIG_SLIMBUS_MSM_NGD=y
@@ -2841,6 +2846,7 @@ CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
 # CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
@@ -2857,6 +2863,7 @@ CONFIG_LCD_CLASS_DEVICE=m
 # CONFIG_BACKLIGHT_CLASS_DEVICE is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_LOGO is not set
+CONFIG_KLAPSE=y
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -4437,7 +4444,7 @@ CONFIG_OVERLAY_FS=y
 # CONFIG_UDF_FS is not set
 
 #
-# DOS/FAT/NT Filesystems
+# DOS/FAT/EXFAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
 # CONFIG_MSDOS_FS is not set
@@ -4445,6 +4452,7 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
+# CONFIG_EXFAT_FS is not set
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 # CONFIG_NTFS_RW is not set
@@ -4691,6 +4699,7 @@ CONFIG_IPC_LOGGING=y
 # CONFIG_QCOM_RTB is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
