configs: regenerate EternalX_defconfig
Signed-off-by: r4venz <zexceed12300@gmail.com>

--- a/arch/arm64/configs/EternalX_defconfig
+++ b/arch/arm64/configs/EternalX_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.263 Kernel Configuration
+# Linux/arm64 4.9.281 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -46,7 +46,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-EternalX-v2.1-stable"
+CONFIG_LOCALVERSION="-EternalX-v2.2-stable"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -96,7 +96,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -132,23 +132,23 @@ CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
+# CONFIG_CGROUP_DEBUG is not set
+CONFIG_CGROUP_FREEZER=y
+# CONFIG_CGROUP_PIDS is not set
+# CONFIG_CGROUP_DEVICE is not set
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
+CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_SCHEDTUNE=y
 # CONFIG_MEMCG is not set
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_SCHED=y
-CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
-# CONFIG_CGROUP_PIDS is not set
-CONFIG_CGROUP_FREEZER=y
-CONFIG_CPUSETS=y
-CONFIG_PROC_PID_CPUSET=y
-# CONFIG_CGROUP_DEVICE is not set
-CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
-# CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
 # CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_SCHED_CORE_ROTATE is not set
@@ -255,10 +255,13 @@ CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR_NONE=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 # CONFIG_CC_STACKPROTECTOR_STRONG is not set
-# CONFIG_LTO is not set
+CONFIG_THIN_ARCHIVES=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -539,7 +542,6 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
@@ -569,10 +571,7 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
-CONFIG_KUSER_HELPERS=y
 CONFIG_KEYS_COMPAT=y
-CONFIG_COMPAT_VDSO=y
-CONFIG_CROSS_COMPILE_ARM32=""
 
 #
 # Power management options
@@ -658,6 +657,7 @@ CONFIG_NET_EGRESS=y
 CONFIG_PACKET=y
 # CONFIG_PACKET_DIAG is not set
 CONFIG_UNIX=y
+CONFIG_UNIX_SCM=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
 CONFIG_XFRM_ALGO=y
@@ -1272,7 +1272,6 @@ CONFIG_BLK_DEV=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_WRITEBACK is not set
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
-CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
@@ -2216,6 +2215,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_BQ25890 is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_NX30P6093 is not set
 
@@ -3792,6 +3792,15 @@ CONFIG_ION_MSM=y
 #
 # CONFIG_PRIMA_WLAN is not set
 CONFIG_PRONTO_WLAN=y
+CONFIG_PRIMA_WLAN_BTAMP=y
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_QCOM_TDLS=y
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -4457,12 +4466,9 @@ CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
 CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:exfat:s0"
-# CONFIG_EXFAT_DEBUG is not set
-# CONFIG_EXFAT_UEVENT is not set
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
@@ -4709,7 +4715,6 @@ CONFIG_IPC_LOGGING=y
 # CONFIG_QCOM_RTB is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
-CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
@@ -4762,7 +4767,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
-# CONFIG_CC_WERROR is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
