--- a/arch/arm64/configs/EternalX_defconfig
+++ b/arch/arm64/configs/EternalX_defconfig
@@ -46,7 +46,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-EternalX-v2.2-stable"
+CONFIG_LOCALVERSION="-EternalX-v3.0-stable"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -96,7 +96,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-# CONFIG_SCHED_WALT is not set
+CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -145,7 +145,6 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
@@ -593,6 +592,7 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -2185,6 +2185,7 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_LTC2952 is not set
 CONFIG_POWER_RESET_QCOM=y
 CONFIG_QCOM_DLOAD_MODE=y
+# CONFIG_QCOM_PRESERVE_MEM is not set
 # CONFIG_POWER_RESET_RESTART is not set
 # CONFIG_POWER_RESET_XGENE is not set
 # CONFIG_POWER_RESET_SYSCON is not set
@@ -2788,6 +2789,7 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 CONFIG_QCOM_KGSL=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 CONFIG_QCOM_KGSL_IOMMU=y
+# CONFIG_FENCE_DEBUG is not set
 # CONFIG_DRM is not set
 # CONFIG_DRM_DP_CEC is not set
 
@@ -3792,15 +3794,6 @@ CONFIG_ION_MSM=y
 #
 # CONFIG_PRIMA_WLAN is not set
 CONFIG_PRONTO_WLAN=y
-CONFIG_PRIMA_WLAN_BTAMP=y
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_QCOM_TDLS=y
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
