--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Deploy Builder
         run: |
-          sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt-get -y install bc build-essential bison flex zip gcc clang libc6 curl libstdc++6 git wget libssl-dev && apt-get -y install p7zip-full python python2 python3 python3-pip tzdata
+          sudo apt-get -y update && sudo apt-get -y upgrade && sudo apt-get -y install bc build-essential bison flex zip gcc clang libc6 curl libstdc++6 git wget libssl-dev && sudo apt-get -y install p7zip-full python python2 python3 python3-pip tzdata
           git clone https://github.com/zexceed12300/eternalx_ci -b EternalX-project/android_kernel_xiaomi_rosy-4.9 --depth=1
           cd eternalx_ci
           git clone https://github.com/EternalX-project/android_kernel_xiaomi_rosy-4.9.git -b lineage-19.1 --depth=1
